[package]
name = "mlsmpm-particles-rs"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy = {version = "0.12" }
#bevy_egui = "0.22"
bevy_egui = { git = "https://github.com/raffaeleragni/bevy_egui", rev = "8ce18a11b0b4961909801fdc4c841f65ddfb0f82" }

derive_builder = "0.12.0"
rand = "0.8"
approx = "~0.5.1"
